c - crash     b - bug fix    e - enhancement    f - new feature  n - note

3.0.4
  c - fix a buffer being overrun with nvidia gpus enabled
  b - no longer leave zombie processes when munge authenticating.
  b - no longer reject procs if it is the second argument to -l

3.0.3
  b - fix for bugzilla #141 - qsub was overwriting the path variable in PBSD_authenticate
  e - automatically create and mount /dev/cpuset when TORQUE is configured but the cpuset
      directory isn't there
  b - fix a bug where node lines past 256 characters were rejected. This buffer has been
      made much larger (8192 characters)
  b - clear out exec_gpus as needed
  b - fix for bugzilla #147 - recreate $PBS_NODESFILE file when restarting a blcr
      checkpointed job
  b - Fixed kill_job so it will only run epilogue.precancel when a job is canceled
      and not on normal job exit.
  b - Applied patch submitted by Eric Roman for resmom/Makefile.am (Bugzilla #147)
  b - Fix for adding -lcr for BLCR makefiles (Bugzilla #146)
  c - fix a potential segfault when using asynchronous runjob with an array slot limit
  b - fix bugzilla #135, stagein was deleting directory instead of file
  b - fix bugzilla #133, qsub submit filter, the -W arguments are not all there
  e - add a mom config option - $attempt_to_make_dir - to give the user the option to 
      have TORQUE attempt to create the directories for their output file if they don't exist
  c - check if the pid list in mom_get_sample is NULL before freeing 
      (only happens with cpusets enabled)
  b - Fixed a problem where pbs_server would seg-fault if munge was not running or
      if an invalid credential were passed to unmunge
  e - Change to allow qsub -l ncpus=x:gpus=x which adds a resource list entry for both
  b - fix so user epilogues are run as user instead of root
  b - fix the prevent pbs_server from hanging when doing server to server job moves.
  b - No longer report a completion code if a job is pre-empted using qrerun. 